fix: login, signup pages overflowing

--- a/src/index.css
+++ b/src/index.css
@@ -118,3 +118,14 @@ Private
 .tasks-section {
   grid-area: tasks;
 }
+
+.hide-scrollbar {
+  /* Hide scrollbar for IE, Edge and Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  display: none;
+}
